survey-planning-tool/envs/staging-frontiersi/api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: qa4mbes
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: api
    spec:
      containers:
        - image: ausseabed/spt-api:latest-beta
          imagePullPolicy: Always
          name: api
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: qa4mbes
spec:
  ports:
   - port: 3000
     targetPort: 3000
  selector:
    k8s-app: api
