survey-planning-tool/envs/staging-frontiersi/mapserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapserver
  namespace: qa4mbes
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mapserver
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: mapserver
    spec:
      containers:
        - image: ausseabed/spt-mapserver:latest-beta
          imagePullPolicy: Always
          name: mapserver
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mapserver
  name: mapserver
  namespace: qa4mbes
spec:
  ports:
   - port: 80
     targetPort: 80
  selector:
    app.kubernetes.io/name: db-postgres
