survey-planning-tool/envs/staging-frontiersi/postgis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db-postgres
  namespace: qa4mbes
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: db-postgres
    spec:
      containers:
        - image: mdillon/postgis:9.6
          imagePullPolicy: Always
          name: db-postgres
          resources: {}
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/db-data
      restartPolicy: Always
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: db-postgres
  namespace: qa4mbes
spec:
  ports:
   - port: 5432
  selector:
    k8s-app: db-postgres
